add modified pages

--- a/emergency.html
+++ b/emergency.html
@@ -24,7 +24,7 @@
 			<div style="margin:0;border:0;padding:0;">
 				<ul class="mui-table-view">
 					<li class="mui-table-view-cell mui-media">
-						<a href="javascript:;">
+						<a href="emergency/allergy.html">
 							<img class="mui-media-object mui-pull-left" src="imgs/allergy_red.png">
 							<div class="mui-media-body">
 								过敏反应
@@ -33,7 +33,7 @@
 						</a>
 					</li>
 					<li class="mui-table-view-cell mui-media">
-						<a href="javascript:;">
+						<a href="emergency/asthma.html">
 							<img class="mui-media-object mui-pull-left" src="imgs/asthma_red.png">
 							<div class="mui-media-body">
 								哮喘发作
@@ -42,7 +42,7 @@
 						</a>
 					</li>
 					<li class="mui-table-view-cell mui-media">
-						<a href="javascript:;">
+						<a href="emergency/bleeding.html">
 							<img class="mui-media-object mui-pull-left" src="imgs/bleeding_red.png">
 							<div class="mui-media-body">
 								出血
@@ -51,7 +51,7 @@
 						</a>
 					</li>
 					<li class="mui-table-view-cell mui-media">
-						<a href="javascript:;">
+						<a href="emergency/broken_bone.html">
 							<img class="mui-media-object mui-pull-left" src="imgs/broken_bone_red.png">
 							<div class="mui-media-body">
 								骨折
@@ -60,7 +60,7 @@
 						</a>
 					</li>
 					<li class="mui-table-view-cell mui-media">
-					<a href="javascript:;">
+					<a href="emergency/fire.html">
 						<img class="mui-media-object mui-pull-left" src="imgs/fire_red.png">
 						<div class="mui-media-body">
 							烧烫伤
@@ -69,7 +69,7 @@
 					</a>
 				</li>
 				<li class="mui-table-view-cell mui-media">
-					<a href="javascript:;">
+					<a href="emergency/diabetes.html">
 						<img class="mui-media-object mui-pull-left" src="imgs/diabetes_red.png">
 						<div class="mui-media-body">
 							糖尿病急症
@@ -78,7 +78,7 @@
 					</a>
 				</li>
 				<li class="mui-table-view-cell mui-media">
-					<a href="javascript:;">
+					<a href="emergency/heartattack.html">
 						<img class="mui-media-object mui-pull-left" src="imgs/heartattack_red.png">
 						<div class="mui-media-body">
 							心脏病发作
@@ -87,7 +87,7 @@
 					</a>
 				</li>
 				<li class="mui-table-view-cell mui-media">
-					<a href="javascript:;">
+					<a href="emergency/heat.html">
 						<img class="mui-media-object mui-pull-left" src="imgs/severeheat_red.png">
 						<div class="mui-media-body">
 							中暑
@@ -96,7 +96,7 @@
 					</a>
 				</li>
 				<li class="mui-table-view-cell mui-media">
-					<a href="javascript:;">
+					<a href="emergency/posioning.html">
 						<img class="mui-media-object mui-pull-left" src="imgs/poison_red.png">
 						<div class="mui-media-body">
 							中毒
@@ -105,7 +105,7 @@
 					</a>
 				</li>
 				<li class="mui-table-view-cell mui-media">
-					<a href="javascript:;">
+					<a href="emergency/sting_bites.html">
 						<img class="mui-media-object mui-pull-left" src="imgs/stings_bites_red.png">
 						<div class="mui-media-body">
 							蛰伤和咬伤
@@ -114,7 +114,7 @@
 					</a>
 				</li>
 				<li class="mui-table-view-cell mui-media">
-					<a href="javascript:;">
+					<a href="emergency/strain.html">
 						<img class="mui-media-object mui-pull-left" src="imgs/sprain_red_.png">
 						<div class="mui-media-body">
 							拉伤和扭伤
@@ -123,7 +123,7 @@
 					</a>
 				</li>
 				<li class="mui-table-view-cell mui-media">
-					<a href="javascript:;">
+					<a href="emergency/stroke.html">
 						<img class="mui-media-object mui-pull-left" src="imgs/stroke_red.png">
 						<div class="mui-media-body">
 							中风
@@ -131,7 +131,7 @@
 						</div>
 					</a>
 				</li><li class="mui-table-view-cell mui-media">
-					<a href="javascript:;">
+					<a href="emergency/unconcious.html">
 						<img class="mui-media-object mui-pull-left" src="imgs/uncon.png">
 						<div class="mui-media-body">
 							意识丧失
