--- a/emergency/bleeding.html
+++ b/emergency/bleeding.html
@@ -20,10 +20,9 @@
 			<h1 class="mui-title">出血</h1>
 		</header>
 		<div class="mui-content">
-			<b>1</b>、患者手、足或面部可能出现皮疹，痒、肿、呼吸变缓。<br />
-			<b>2</b>、观察到这些症状，立即拨打120。
-			<b>3</b>、如果患者有过敏症，并且随声携带自动注射器，
-			请帮助他们使用。并且持续安慰患者，等待救护车抵达
+			<b>1</b>、用周围能找到的任何物品按压伤口，以达到止血或减缓出血的目的。<br />
+			<b>2</b>、观察到这些症状，立即拨打120。或请别人帮忙拨打</br>
+			<b>3</b>、持续按压伤口直到后续救援到达
 			<hr />
 		了解更多
 		<hr />
