--- a/emergency/broken_bone.html
+++ b/emergency/broken_bone.html
@@ -20,10 +20,9 @@
 			<h1 class="mui-title">骨折</h1>
 		</header>
 		<div class="mui-content">
-			<b>1</b>、患者手、足或面部可能出现皮疹，痒、肿、呼吸变缓。<br />
-			<b>2</b>、观察到这些症状，立即拨打120。
-			<b>3</b>、如果患者有过敏症，并且随声携带自动注射器，
-			请帮助他们使用。并且持续安慰患者，等待救护车抵达
+			<b>1</b>、鼓励伤者用自己的手，或用沉淀、衣物等包扎、固定患处，以避免不必要的活动。<br />
+			<b>2</b>、如果伤处明显变形或有剧痛，以及自己不能行走时，应拨打120或请别人帮忙拨打。<br />
+			<b>3</b>、确保伤处被妥善固定，直到救援抵达。
 			<hr />
 		了解更多
 		<hr />
