--- a/emergency/heartattack.html
+++ b/emergency/heartattack.html
@@ -20,13 +20,15 @@
 			<h1 class="mui-title">心脏病发作</h1>
 		</header>
 		<div class="mui-content">
-			<b>1</b>、患者手、足或面部可能出现皮疹，痒、肿、呼吸变缓。<br />
-			<b>2</b>、观察到这些症状，立即拨打120。
-			<b>3</b>、如果患者有过敏症，并且随声携带自动注射器，
-			请帮助他们使用。并且持续安慰患者，等待救护车抵达
+			<b>1</b>、患者可能感觉到持续的压迫性胸痛，或者上臂、颈部、下颌、背部或者胃部出现难以描述的不适感。<br />
+			<b>2</b>、观察到这些症状，立即拨打120。<br />
+			<b>3</b>、让患者处于舒服的体位，例如坐在地板上，靠在墙上或椅子上。如果有阿司匹林并且患者不过敏，
+			可以给他们服用阿司匹林。<br />
+			<b>4</b>、在等候救护车时，应不断安抚患者。
 			<hr />
 		了解更多
 		<hr />
+		如果患者无意识了，该怎么办？
 		</div>
 	</body>
 </html>
