--- a/emergency/stroke.html
+++ b/emergency/stroke.html
@@ -20,10 +20,9 @@
 			<h1 class="mui-title">中风</h1>
 		</header>
 		<div class="mui-content">
-			<b>1</b>、患者手、足或面部可能出现皮疹，痒、肿、呼吸变缓。<br />
-			<b>2</b>、观察到这些症状，立即拨打120。
-			<b>3</b>、如果患者有过敏症，并且随声携带自动注射器，
-			请帮助他们使用。并且持续安慰患者，等待救护车抵达
+			<b>1</b>、记住F.A.S.T。面部(Face)：是否一侧面瘫？胳膊(Arms)：两个胳膊能同时抬起来吗？说话(Speech):
+			说话时吐字表达清晰吗?时间(Time):马上拨打120。<br />
+			<b>2</b>、等候救护车时，随时和患者说话，安抚他们。
 			<hr />
 		了解更多
 		<hr />
