--- a/information.html
+++ b/information.html
@@ -28,7 +28,7 @@
 		<div style="margin:0;border:0;padding:0;">
 			<ul class="mui-table-view">
 				<li class="mui-table-view-cell mui-media">
-					<a href="javascript:;">
+					<a href="information/info.html">
 						<img class="mui-media-object mui-pull-left" src="imgs/redcross.png">
 						<div class="mui-media-body">
 							<p class='mui-ellipsis'>中国红十字会简介</p>
@@ -36,7 +36,7 @@
 					</a>
 				</li>
 				<li class="mui-table-view-cell mui-media">
-					<a href="javascript:;">
+					<a href="information/principle.html">
 						<img class="mui-media-object mui-pull-left" src="imgs/redcross.png">
 						<div class="mui-media-body">
 							<p class='mui-ellipsis'>红十字会运动基本原则</p>
@@ -44,7 +44,7 @@
 					</a>
 				</li>
 				<li class="mui-table-view-cell mui-media">
-					<a href="javascript:;">
+					<a href="information/course.html">
 						<img class="mui-media-object mui-pull-left" src="imgs/redcross.png">
 						<div class="mui-media-body">
 							<p class='mui-ellipsis'>急救课程</p>
@@ -67,17 +67,10 @@
 						</div>
 					</a>
 				</li>
+			
 				<li class="mui-table-view-cell mui-media">
 					<a href="javascript:;">
-						<img class="mui-media-object mui-pull-left" src="imgs/redcross.png">
-						<div class="mui-media-body">
-							<p class='mui-ellipsis'>更多急救课程</p>
-						</div>
-					</a>
-				</li>
-				<li class="mui-table-view-cell mui-media">
-					<a href="javascript:;">
-						<img class="mui-media-object mui-pull-left" src="imgs/redcross.png">
+						<img class="mui-media-object mui-pull-left" src="imgs/sharapp.png">
 						<div class="mui-media-body">
 							<p class='mui-ellipsis'>分享给朋友</p>
 						</div>
