--- a/precaution.html
+++ b/precaution.html
@@ -41,25 +41,15 @@
 		<div style="margin:0;border:0;padding:0;">
 			<ul class="mui-table-view">
 				<li class="mui-table-view-cell mui-media">
-					<a href="javascript:;">
+					<a href="precaution/chemistry.html">
 						<img class="mui-media-object mui-pull-left" src="imgs/chemical_emergencies_grey.png">
 						<div class="mui-media-body">
 							化学紧急事故
-							
 						</div>
 					</a>
 				</li>
 				<li class="mui-table-view-cell mui-media">
-					<a href="javascript:;">
-						<img class="mui-media-object mui-pull-left" src="imgs/drought_grey.png">
-						<div class="mui-media-body">
-							旱灾
-							
-						</div>
-					</a>
-				</li>
-				<li class="mui-table-view-cell mui-media">
-					<a href="javascript:;">
+					<a href="precaution/earthquake.html">
 						<img class="mui-media-object mui-pull-left" src="imgs/earthquake_newgrey.png">
 						<div class="mui-media-body">
 							地震
@@ -67,7 +57,7 @@
 					</a>
 				</li>
 				<li class="mui-table-view-cell mui-media">
-					<a href="javascript:;">
+					<a href="precaution/everyday.html">
 						<img class="mui-media-object mui-pull-left" src="imgs/everyday_newgrey.png">
 						<div class="mui-media-body">
 							日常突发事件
@@ -75,15 +65,15 @@
 					</a>
 				</li>
 				<li class="mui-table-view-cell mui-media">
-					<a href="javascript:;">
+					<a href="precaution/fire.html">
 						<img class="mui-media-object mui-pull-left" src="imgs/fire_newgrey.png">
 						<div class="mui-media-body">
 							火灾
-							</div>
+						</div>
 					</a>
 				</li>
 				<li class="mui-table-view-cell mui-media">
-					<a href="javascript:;">
+					<a href="precaution/flood.html">
 						<img class="mui-media-object mui-pull-left" src="imgs/flood_newgrey.png">
 						<div class="mui-media-body">
 							洪水
@@ -91,7 +81,7 @@
 					</a>
 				</li>
 				<li class="mui-table-view-cell mui-media">
-					<a href="javascript:;">
+					<a href="precaution/food.html">
 						<img class="mui-media-object mui-pull-left" src="imgs/foodsafety_grey.png">
 						<div class="mui-media-body">
 							食品安全
@@ -99,7 +89,7 @@
 					</a>
 				</li>
 				<li class="mui-table-view-cell mui-media">
-					<a href="javascript:;">
+					<a href="precaution/severeheat.html">
 						<img class="mui-media-object mui-pull-left" src="imgs/severeheat_newgrey.png">
 						<div class="mui-media-body">
 							热浪
@@ -107,7 +97,7 @@
 					</a>
 				</li>
 				<li class="mui-table-view-cell mui-media">
-					<a href="javascript:;">
+					<a href="precaution/tsunami.html">
 						<img class="mui-media-object mui-pull-left" src="imgs/tsunami_newgrey.png">
 						<div class="mui-media-body">
 							海啸
@@ -115,7 +105,7 @@
 					</a>
 				</li>
 				<li class="mui-table-view-cell mui-media">
-					<a href="javascript:;">
+					<a href="precaution/volcano.html">
 						<img class="mui-media-object mui-pull-left" src="imgs/volcano_grey.png">
 						<div class="mui-media-body">
 							火山
@@ -123,7 +113,7 @@
 					</a>
 				</li>
 				<li class="mui-table-view-cell mui-media">
-					<a href="javascript:;">
+					<a href="precaution/servercold.html">
 						<img class="mui-media-object mui-pull-left" src="imgs/severecold_newgrey.png">
 						<div class="mui-media-body">
 							严寒
