--- a/emergency/allergy.html
+++ b/emergency/allergy.html
@@ -21,9 +21,9 @@
 		</header>
 		<div class="mui-content">
 			<b>1</b>、患者手、足或面部可能出现皮疹，痒、肿、呼吸变缓。<br />
-			<b>2</b>、观察到这些症状，立即拨打120。
+			<b>2</b>、观察到这些症状，立即拨打120。<br />
 			<b>3</b>、如果患者有过敏症，并且随声携带自动注射器，
-			请帮助他们使用。并且持续安慰患者，等待救护车抵达
+			请帮助他们使用。并且持续安慰患者，等待救护车抵达。
 			<hr />
 		了解更多
 		<hr />
