--- a/emergency/asthma.html
+++ b/emergency/asthma.html
@@ -21,10 +21,11 @@
 			<h1 class="mui-title">哮喘发作</h1>
 		</header>
 		<div class="mui-content">
-			<b>1</b>、患者手、足或面部可能出现皮疹，痒、肿、呼吸变缓。
+			<b>1</b>、帮助患者取较舒适体位坐下，并助其服药。
 			<br />
-			<b>2</b>、观察到这些症状，立即拨打120。
-			<b>3</b>、如果患者有过敏症，并且随声携带自动注射器， 请帮助他们使用。并且持续安慰患者，等待救护车抵达
+			<b>2</b>、安抚患者
+			<br />
+			<b>3</b>、如果哮喘加重，患者未带药物或服药后症状未缓解，请拨打120或请别人帮忙拨打120
 			<hr /> 了解更多
 			<hr />
 		</div>
