--- a/emergency/fire.html
+++ b/emergency/fire.html
@@ -20,9 +20,10 @@
 			<h1 class="mui-title">烧烫伤</h1>
 		</header>
 		<div class="mui-content">
-			<b>1</b>、患者手、足或面部可能出现皮疹，痒、肿、呼吸变缓。<br />
-			<b>2</b>、观察到这些症状，立即拨打120。
-			<b>3</b>、如果患者有过敏症，并且随声携带自动注射器，
+			<b>1</b>、用流动的冷水冲洗烧烫伤部位以降低局部温度，至少冲洗10分钟。<br />
+			<b>2</b>、如果烧烫伤需要进一步的医疗处理，可以用保鲜膜或干净的
+			塑料袋轻轻盖住伤口。或者也可以不用覆盖伤口。<br />
+			<b>3</b>、如有必要，请拨打120或者请他人帮助拨打。
 			请帮助他们使用。并且持续安慰患者，等待救护车抵达
 			<hr />
 		了解更多
