--- a/emergency/heat.html
+++ b/emergency/heat.html
@@ -20,10 +20,12 @@
 			<h1 class="mui-title">中暑</h1>
 		</header>
 		<div class="mui-content">
-			<b>1</b>、患者手、足或面部可能出现皮疹，痒、肿、呼吸变缓。<br />
-			<b>2</b>、观察到这些症状，立即拨打120。
-			<b>3</b>、如果患者有过敏症，并且随声携带自动注射器，
-			请帮助他们使用。并且持续安慰患者，等待救护车抵达
+			<b>1</b>、患者皮肤灼热、发红、可能干燥，也可能潮湿。患者还可能出现意识障碍
+			，同时伴有呕吐、发热。<br />
+			<b>2</b>、请尽快拨打120或者请别人帮忙拨打。住宿会危及生命。<br />
+			<b>3</b>、把患者一道凉快的地方。脱掉衣服，或者解开衣扣，用冷毛巾或湿布擦拭皮肤。
+			给患者扇风。如果患者意识清醒，可以让他喝少量水。但要让患者慢慢喝。<br />
+			<b>4</b>、如果需要，可用布包裹冰块或者冰袋，敷于患者的手腕，脚踝、腹股沟、颈部等处，帮助患者快速降温。
 			<hr />
 		了解更多
 		<hr />
