--- a/emergency/posioning.html
+++ b/emergency/posioning.html
@@ -20,10 +20,11 @@
 			<h1 class="mui-title">中毒</h1>
 		</header>
 		<div class="mui-content">
-			<b>1</b>、患者手、足或面部可能出现皮疹，痒、肿、呼吸变缓。<br />
-			<b>2</b>、观察到这些症状，立即拨打120。
-			<b>3</b>、如果患者有过敏症，并且随声携带自动注射器，
-			请帮助他们使用。并且持续安慰患者，等待救护车抵达
+			<b>1</b>、了解患者服用了什么东西，什么时候服的，服了多少。<br />
+			<b>2</b>、尽快给急救中心打电话或请他人打电话。如果患者行为异常，
+			意识开始丧失，呼吸困难，拨打120。<br />
+			<b>3</b>、不要给患者催吐或者让他们喝水，除非有急救中心的建议。<br />
+			
 			<hr />
 		了解更多
 		<hr />
