--- a/emergency/sting_bites.html
+++ b/emergency/sting_bites.html
@@ -20,14 +20,15 @@
 				   
 			<h1 class="mui-title">蜇伤和咬伤</h1>
 		</header>
+		<div>
+		</div>
 		<div class="mui-content">
-			<b>1</b>、患者手、足或面部可能出现皮疹，痒、肿、呼吸变缓。<br />
-			<b>2</b>、观察到这些症状，立即拨打120。
-			<b>3</b>、如果患者有过敏症，并且随声携带自动注射器，
-			请帮助他们使用。并且持续安慰患者，等待救护车抵达
+			昆虫蛰伤或叮咬可以导致严重的损伤或疾病。应遵照这些预防措施防范蛰伤、叮咬，保护自己和家人，
+			特别是蜱虫的叮咬。
 			<hr />
-		了解更多
+		相关急救
 		<hr />
+		昆虫蛰伤和叮咬
 		</div>
 	</body>
 </html>
