--- a/emergency/unconcious.html
+++ b/emergency/unconcious.html
@@ -17,13 +17,12 @@
 	<body>
 		<header class="mui-bar mui-bar-nav">
 			<a class="mui-action-back mui-icon mui-icon-left-nav" href="../emergency.html"></a>
-			<h1 class="mui-title">无意识</h1>
+			<h1 class="mui-title">意识丧失</h1>
 		</header>
 		<div class="mui-content">
-			<b>1</b>、患者手、足或面部可能出现皮疹，痒、肿、呼吸变缓。<br />
-			<b>2</b>、观察到这些症状，立即拨打120。
-			<b>3</b>、如果患者有过敏症，并且随声携带自动注射器，
-			请帮助他们使用。并且持续安慰患者，等待救护车抵达
+			<b>1</b>、让患者头部后仰，检查他是否有呼吸。<br />
+			<b>2</b>、若有呼吸，则参照<br />
+			<b>3</b>、如果患者呼吸，则参照
 			<hr />
 		了解更多
 		<hr />
