UI and webpages finished 90%+

--- a/home.html
+++ b/home.html
@@ -6,12 +6,12 @@
 		<meta name="viewport" content="width=device-width,initial-scale=1,minimum-scale=1,maximum-scale=1,user-scalable=no" />
 		<!--适应移动端-->
 		<script src="js/mui.min.js"></script>
+		<script type="text/javascript" charset="utf-8">
+			mui.init();
+		</script>
 		<link href="css/mui.min.css" rel="stylesheet" />
-
 	</head>
-
 	<body>
-
 		<div class="mui-slider">
 			<div class="mui-slider-group mui-slider-loop">
 				<!--    支持循环，需要重复图片节点-->
@@ -140,7 +140,7 @@
 					</a>
 				</li>
 				<li class="mui-table-view-cell mui-media">
-					<a href="javascript:;">
+					<a href="home/strain.html">
 						<img class="mui-media-object mui-pull-left" src="imgs/strain_sprains_newgrey.png">
 						<div class="mui-media-body">
 							扭伤和拉伤
@@ -168,8 +168,10 @@
 				</li>
 			</ul>
 		</div>
-		<script>	
-		  
+		<script type="text/javascript" charset="utf-8">
+			mui.init({
+				swipeBack: true
+			})
        </script>
 	
     
