--- a/home/bleeding.html
+++ b/home/bleeding.html
@@ -20,7 +20,7 @@
 			<h1 class="mui-title">出血</h1>
 		</header>
 		<div class="mui-content">
-			<h4>1.寻找周围的合适物品按压伤口，止血或减缓出血。</h4> 　　按压伤口，可帮助血液凝固，并止血。
+			<h4>1.寻找周围的合适物品按压伤口，止血或减缓出血</h4> 　　按压伤口，可帮助血液凝固，并止血。
 			<h4>2.如果出血严重，请尽快拨打120，或请他人帮助呼叫</h4>
 			<h4>3.持续按压伤口直到医务人员到达</h4>
 		</div>
@@ -43,7 +43,7 @@
 				<li class="mui-table-view-cell mui-collapse">
 					<a class="mui-navigate-right" href="javascript:;">出血严重时，我可以使用止血带吗？</a>
 					<div class="mui-collapse-content">
-						未经培训的人员不适宜使用止血带，不合理、不正确使用可能加重伤情。只有在直接按压无效或 者无法直接按压的情况下，才使用止血带。另外，如果使用止血带，需记录使用时间并告知后续急救人员.
+						未经培训的人员不适宜使用止血带，不合理、不正确使用可能加重伤情。只有在直接按压无效或 者无法直接按压的情况下，才使用止血带。另外，如果使用止血带，需记录使用时间并告知后续急救人员。
 					</div>
 				</li>
 				<li class="mui-table-view-cell mui-collapse">
@@ -68,7 +68,7 @@
 				<li class="mui-table-view-cell mui-collapse">
 					<a class="mui-navigate-right" href="javascript:;">如果伤口中有东西嵌进去了，我怎么办？</a>
 					<div class="mui-collapse-content">
-						不要取出嵌入物，因为潜入无能堵塞伤口，阻止血液流出。可以围绕嵌入物加压包扎。 取出嵌入物会导致伤口出血更严重.
+						不要取出嵌入物，因为潜入无能堵塞伤口，阻止血液流出。可以围绕嵌入物加压包扎。 取出嵌入物会导致伤口出血更严重。
 					</div>
 				</li>
 				<li class="mui-table-view-cell mui-collapse">
@@ -79,13 +79,6 @@
 				</li>
 			</ul>
 		</div>
-		<script src='../js/mui.min.js'></script>
-		<script type="text/javascript" charset="utf-8">
-			mui.init({
-				swipeBack:true //启用右滑关闭功能
-			});
-		</script>
-
 	</body>
 
 </html>
