--- a/home/broken_bone.html
+++ b/home/broken_bone.html
@@ -20,71 +20,53 @@
 			<h1 class="mui-title">骨折</h1>
 		</header>
 		<div class="mui-content">
-			<h4>1.寻找周围的合适物品按压伤口，止血或减缓出血。</h4> 　　按压伤口，可帮助血液凝固，并止血。
-			<h4>2.如果出血严重，请尽快拨打120，或请他人帮助呼叫</h4>
-			<h4>3.持续按压伤口直到医务人员到达</h4>
+			<h4>1.鼓励伤者用手以及衬垫、衣物等扶持固定患肢，避免不必要的移动</h4> 　　按压伤口，可帮助血液凝固，并止血。
+			<h4>2.如果患处明显变形，剧烈疼痛，需要运送至医院，应拨打120或者请他人帮忙呼叫</h4>
+			<h4>3.确保环巢湖固定，直到医护人员抵达。</h4>
 		</div>
 		<div class="mui-content">
 			<h4>常见问题</h4>
 			<hr />
 			<ul class="mui-table-view">
 				<li class="mui-table-view-cell mui-collapse">
-					<a class="mui-navigate-right" href="javascript:;">我可以用什么按压伤口？</a>
+					<a class="mui-navigate-right" href="javascript:;">怎样判断是否骨折？</a>
 					<div class="mui-collapse-content">
-						可以使用身边各种干净物品按压伤口，不一定非要用急救包中的敷料。 你可以用手、T恤、毛巾等，总之任何能覆盖在伤口上帮助减缓出血的东西来按压。
+						伤处可有淤血、肿痛，或者以不正常的姿势卧倒，或者以不正常的姿势卧倒。严重骨折可有肢体畸形，或者开放伤口。
 					</div>
 				</li>
 				<li class="mui-table-view-cell mui-collapse">
-					<a class="mui-navigate-right" href="javascript:;">如果血压浸透了我用来覆盖伤口的物品，我该怎么办？</a>
+					<a class="mui-navigate-right" href="javascript:;">怎样固定骨折？</a>
 					<div class="mui-collapse-content">
-						不要去掉被血液浸透的覆盖物，可以再多加几层，并保持按压的力度。同时尽快拨打120或者请他人帮助呼叫。
+						不要随意移动伤肢，可用软垫（如衣物、毯子等）包裹患肢。保持固定位，等待救援到达。
 					</div>
 				</li>
 				<li class="mui-table-view-cell mui-collapse">
-					<a class="mui-navigate-right" href="javascript:;">出血严重时，我可以使用止血带吗？</a>
+					<a class="mui-navigate-right" href="javascript:;">如果伤者不让固定上肢怎么办？</a>
 					<div class="mui-collapse-content">
-						未经培训的人员不适宜使用止血带，不合理、不正确使用可能加重伤情。只有在直接按压无效或 者无法直接按压的情况下，才使用止血带。另外，如果使用止血带，需记录使用时间并告知后续急救人员.
+						鼓励伤者自己用手固定伤处，也可以用衬垫和软垫承托。
 					</div>
 				</li>
 				<li class="mui-table-view-cell mui-collapse">
-					<a class="mui-navigate-right" href="javascript:;">伤者看上去面色苍白，感觉发冷、眩晕。这意味着什么？</a>
+					<a class="mui-navigate-right" href="javascript:;">如果肢体骨折或者脱位，我能复位吗？</a>
 					<div class="mui-collapse-content">
-						这表明体内供血不足。有可能会危及生命，因为他会迅速的引发其他问题，比如 体内缺氧、心脏病发作或者器官损伤，伤者或者患者的这种身体体反应，被称之为 休克。如果你怀疑有可能出现休克，请立即拨打120.然后让患者平躺，严防血液流失。
+						不能，如果脱位或骨折，应由医生处理，不要试图现场复位，可能会造成进一步的损伤。
 					</div>
 				</li>
 				<li class="mui-table-view-cell mui-collapse">
-					<a class="mui-navigate-right" href="javascript:;">我担心跟上这的雪也接触会被传染疾病，怎么办？</a>
+					<a class="mui-navigate-right" href="javascript:;">如果伤者除了擦伤，没有其他异常，怎么处置？</a>
 					<div class="mui-collapse-content">
-						最好不要直接接触他人的血液，你可以戴上医用手套或者塑料袋。 或者让上着自己用手来压迫止血。
+						弄清受伤的原因如坠落物体撞击的你判断是否可能造成骨折，但在没有x光检查的情况下，很难区分骨折、关节受伤或脱位，如果存有疑虑，最好去医院检查。
 					</div>
 
 				</li>
 				<li class="mui-table-view-cell mui-collapse">
-					<a class="mui-navigate-right" href="javascript:;">我应该冲洗伤口吗？</a>
+					<a class="mui-navigate-right" href="javascript:;">患者能活动患肢，并用其支撑站立，是否意味着他们没有骨折？</a>
 					<div class="mui-collapse-content">
-						对于小的切割伤和擦伤，你可以冲洗伤口，除去污物。出血严重的伤口不要冲洗。这样做会冲掉已经形成的 血凝块，导致出血加重。
-					</div>
-				</li>
-				<li class="mui-table-view-cell mui-collapse">
-					<a class="mui-navigate-right" href="javascript:;">如果伤口中有东西嵌进去了，我怎么办？</a>
-					<div class="mui-collapse-content">
-						不要取出嵌入物，因为潜入无能堵塞伤口，阻止血液流出。可以围绕嵌入物加压包扎。 取出嵌入物会导致伤口出血更严重.
-					</div>
-				</li>
-				<li class="mui-table-view-cell mui-collapse">
-					<a class="mui-navigate-right" href="javascript:;">鼻子出血怎么办？</a>
-					<div class="mui-collapse-content">
-						捏住鼻翼，让患者身体前倾，用嘴呼吸。捏住鼻翼能促进血液凝固。不要让患者后仰，虽然这样做看似正确。 后仰可能会导致血液流入气道，将其堵塞，或者血液流入为，导致患者呕吐。
+						不能完全确定，还需要x光检查诊断是否骨折，即使存在骨折，伤者也可能可以移动患肢。如果损伤导致的疼痛不适等症状，不能很快缓解，应该到医院就诊。
 					</div>
 				</li>
 			</ul>
 		</div>
-		<script src='../js/mui.min.js'></script>
-		<script type="text/javascript" charset="utf-8">
-			mui.init({
-				swipeBack:true //启用右滑关闭功能
-			});
-		</script>
 
 	</body>
 
