--- a/home/allergy.html
+++ b/home/allergy.html
@@ -21,9 +21,9 @@
 		</header>
 		
 		<div class="mui-content">
-			<h4>1.患者手、足或面部出现皮疹、瘙痒或水肿，并可能出现呼吸浅慢。</h4> 　　也可能出现呕吐和腹泻状况，引起过敏反应的常见过敏原有花粉、蚊虫叮咬、乳胶，还有一些食物，如坚果或者奶制品.
+			<h4>1.患者手、足或面部出现皮疹、瘙痒或水肿，并可能出现呼吸浅慢</h4> 　　也可能出现呕吐和腹泻状况，引起过敏反应的常见过敏原有花粉、蚊虫叮咬、乳胶，还有一些食物，如坚果或者奶制品.
 
-			<h4>2.如果有人发生过敏反应，请拨打120.</h4> 　　如果有人发生过敏反应（呼吸困难、休克、或者精神异常），并带有自动注射器，请帮助他们用药.
+			<h4>2.如果有人发生过敏反应，请拨打120</h4> 　　如果有人发生过敏反应（呼吸困难、休克、或者精神异常），并带有自动注射器，请帮助他们用药.
 
 			<h4>3.等候救护车时，请持续观察并安抚患者</h4>
 		</div>
@@ -34,19 +34,19 @@
 				<li class="mui-table-view-cell mui-collapse">
 					<a class="mui-navigate-right" href="javascript:;">什么是过敏休克? </a>
 					<div class="mui-collapse-content">
-						过敏休克是严重的过敏反应，可以导致患者呼吸困难，脉搏微弱，低血压，精神波动
+						过敏休克是严重的过敏反应，可以导致患者呼吸困难，脉搏微弱，低血压，精神波动。
 					</div>
 				</li>
 				<li class="mui-table-view-cell mui-collapse">
 					<a class="mui-navigate-right" href="javascript:;">什么样的食物会导致过敏？</a>
 					<div class="mui-collapse-content">
-						引起过敏反应最常见的食物是坚果、贝类、奶制品和鸡蛋。其他过敏原包括乳胶、蚊虫叮咬以及某些能引起过敏反应的药物
+						引起过敏反应最常见的食物是坚果、贝类、奶制品和鸡蛋。其他过敏原包括乳胶、蚊虫叮咬以及某些能引起过敏反应的药物。
 					</div>
 				</li>
 				<li class="mui-table-view-cell mui-collapse">
 					<a class="mui-navigate-right" href="javascript:;">我能给患者使用自动注射器吗？</a>
 					<div class="mui-collapse-content">
-						如果患者发生国民梵音，并自己带有自动注射器，经患者同意，你可以帮助他们使用.
+						如果患者发生过敏反应，并自己带有自动注射器，经患者同意，你可以帮助他们使用。
 					</div>
 				</li>
 				<li class="mui-table-view-cell mui-collapse">
@@ -57,13 +57,7 @@
 				</li>
 			</ul>
 		</div>
-		<script src='../js/mui.min.js'></script>
-		<script>
-			mui.init({
-				swipeBack: true //启用右滑关闭功能
-			});
-		</script>
-
+		<script src="../js/mui.min.js"></script>
 	</body>
 
 </html>
