--- a/home/strain.html
+++ b/home/strain.html
@@ -20,72 +20,41 @@
 			<h1 class="mui-title">扭伤和拉伤</h1>
 		</header>
 		<div class="mui-content">
-			<h4>1.寻找周围的合适物品按压伤口，止血或减缓出血。</h4> 　　按压伤口，可帮助血液凝固，并止血。
-			<h4>2.如果出血严重，请尽快拨打120，或请他人帮助呼叫</h4>
-			<h4>3.持续按压伤口直到医务人员到达</h4>
-		</div>
-		<div class="mui-content">
+			<h4>1.记住休息、固定、冷敷和抬高伤肢</h4> 　　按压伤口，可帮助血液凝固，并止血这是肌肉、骨、关节损伤的一般治疗。
+			<h4>2.休息、固定、冷敷、抬高伤肢</h4>
+			<hr />
 			<h4>常见问题</h4>
 			<hr />
 			<ul class="mui-table-view">
 				<li class="mui-table-view-cell mui-collapse">
-					<a class="mui-navigate-right" href="javascript:;">我可以用什么按压伤口？</a>
+					<a class="mui-navigate-right" href="javascript:;">如何判断患者是否有拉伤或者扭伤？</a>
 					<div class="mui-collapse-content">
-						可以使用身边各种干净物品按压伤口，不一定非要用急救包中的敷料。 你可以用手、T恤、毛巾等，总之任何能覆盖在伤口上帮助减缓出血的东西来按压。
+						扭伤和拉上是常见损伤，由身体某部位突然反常运动造成。患者常感到疼痛，患处肿胀，以及在关节或肌肉周围出现淤青。如果损伤关节，患者很难移动患肢。
 					</div>
 				</li>
 				<li class="mui-table-view-cell mui-collapse">
-					<a class="mui-navigate-right" href="javascript:;">如果血压浸透了我用来覆盖伤口的物品，我该怎么办？</a>
+					<a class="mui-navigate-right" href="javascript:;">冷敷和冰敷有什么不同？</a>
 					<div class="mui-collapse-content">
-						不要去掉被血液浸透的覆盖物，可以再多加几层，并保持按压的力度。同时尽快拨打120或者请他人帮助呼叫。
+						冷敷是用毛巾包裹冰块或速冻食品做成的，和冷敷的唯一区别是：冷敷不用冰，用冷水浸湿的毛巾等物品。如果用冰，确保不使用冰直接触及皮肤。
 					</div>
 				</li>
 				<li class="mui-table-view-cell mui-collapse">
-					<a class="mui-navigate-right" href="javascript:;">出血严重时，我可以使用止血带吗？</a>
+					<a class="mui-navigate-right" href="javascript:;">拉伤和扭伤的区别是什么？</a>
 					<div class="mui-collapse-content">
-						未经培训的人员不适宜使用止血带，不合理、不正确使用可能加重伤情。只有在直接按压无效或 者无法直接按压的情况下，才使用止血带。另外，如果使用止血带，需记录使用时间并告知后续急救人员.
+						拉伤是肌肉损伤，而扭伤通常是关节受损，例如膝关节、踝关节、肘关节。
 					</div>
-				</li>
-				<li class="mui-table-view-cell mui-collapse">
-					<a class="mui-navigate-right" href="javascript:;">伤者看上去面色苍白，感觉发冷、眩晕。这意味着什么？</a>
-					<div class="mui-collapse-content">
-						这表明体内供血不足。有可能会危及生命，因为他会迅速的引发其他问题，比如 体内缺氧、心脏病发作或者器官损伤，伤者或者患者的这种身体体反应，被称之为 休克。如果你怀疑有可能出现休克，请立即拨打120.然后让患者平躺，严防血液流失。
-					</div>
-				</li>
-				<li class="mui-table-view-cell mui-collapse">
-					<a class="mui-navigate-right" href="javascript:;">我担心跟上这的雪也接触会被传染疾病，怎么办？</a>
-					<div class="mui-collapse-content">
-						最好不要直接接触他人的血液，你可以戴上医用手套或者塑料袋。 或者让上着自己用手来压迫止血。
-					</div>
+			
 
 				</li>
 				<li class="mui-table-view-cell mui-collapse">
-					<a class="mui-navigate-right" href="javascript:;">我应该冲洗伤口吗？</a>
+					<a class="mui-navigate-right" href="javascript:;">冷敷多长时间？</a>
 					<div class="mui-collapse-content">
-						对于小的切割伤和擦伤，你可以冲洗伤口，除去污物。出血严重的伤口不要冲洗。这样做会冲掉已经形成的 血凝块，导致出血加重。
+						用毛巾包裹的冰块冷敷伤口不要超过20分钟，冰块温度过低，不能直接触及皮肤。
 					</div>
 				</li>
-				<li class="mui-table-view-cell mui-collapse">
-					<a class="mui-navigate-right" href="javascript:;">如果伤口中有东西嵌进去了，我怎么办？</a>
-					<div class="mui-collapse-content">
-						不要取出嵌入物，因为潜入无能堵塞伤口，阻止血液流出。可以围绕嵌入物加压包扎。 取出嵌入物会导致伤口出血更严重.
-					</div>
-				</li>
-				<li class="mui-table-view-cell mui-collapse">
-					<a class="mui-navigate-right" href="javascript:;">鼻子出血怎么办？</a>
-					<div class="mui-collapse-content">
-						捏住鼻翼，让患者身体前倾，用嘴呼吸。捏住鼻翼能促进血液凝固。不要让患者后仰，虽然这样做看似正确。 后仰可能会导致血液流入气道，将其堵塞，或者血液流入为，导致患者呕吐。
-					</div>
-				</li>
+				
 			</ul>
 		</div>
-		<script src='../js/mui.min.js'></script>
-		<script type="text/javascript" charset="utf-8">
-			mui.init({
-				swipeBack:true //启用右滑关闭功能
-			});
-		</script>
-
 	</body>
 
 </html>
