--- a/home/unconcious2.html
+++ b/home/unconcious2.html
@@ -20,72 +20,27 @@
 			<h1 class="mui-title">无意识无自主呼吸</h1>
 		</header>
 		<div class="mui-content">
-			<h4>1.寻找周围的合适物品按压伤口，止血或减缓出血。</h4> 　　按压伤口，可帮助血液凝固，并止血。
-			<h4>2.如果出血严重，请尽快拨打120，或请他人帮助呼叫</h4>
-			<h4>3.持续按压伤口直到医务人员到达</h4>
-		</div>
-		<div class="mui-content">
+			<h4>1.使患者的头部后仰观察是否有自主呼吸。</h4> 　　
+			<h4>2.尽快拨打120，如果有自主呼吸，请参考无意识有自主呼吸的如果有自主呼吸，请参考无意识有自主呼吸的相关急救，张杰相关急救章节。</h4>
+			<h4>3.如果没有自主呼吸，立即开始胸外按压。一只手的掌根放在患者胸部正中，双手重叠十指相扣，掌心翘起垂直按压</h4>
+	<hr />
 			<h4>常见问题</h4>
 			<hr />
 			<ul class="mui-table-view">
 				<li class="mui-table-view-cell mui-collapse">
-					<a class="mui-navigate-right" href="javascript:;">我可以用什么按压伤口？</a>
+					<a class="mui-navigate-right" href="javascript:;">什么是胸外按压？</a>
 					<div class="mui-collapse-content">
-						可以使用身边各种干净物品按压伤口，不一定非要用急救包中的敷料。 你可以用手、T恤、毛巾等，总之任何能覆盖在伤口上帮助减缓出血的东西来按压。
+						胸外按压式把手放在患者胸部正中快速用力按压胸部，然后松开手，血液从心脏泵出维持循环。。
 					</div>
 				</li>
 				<li class="mui-table-view-cell mui-collapse">
-					<a class="mui-navigate-right" href="javascript:;">如果血压浸透了我用来覆盖伤口的物品，我该怎么办？</a>
+					<a class="mui-navigate-right" href="javascript:;">怎么做人工呼吸？</a>
 					<div class="mui-collapse-content">
-						不要去掉被血液浸透的覆盖物，可以再多加几层，并保持按压的力度。同时尽快拨打120或者请他人帮助呼叫。
+						认为可以做到按压胸部30次，可以进行两次的人工呼吸用你的口对患者的口和鼻，别漏气，吹两次气，对1岁以下的婴儿，你需要用口封住他的口和鼻，因为他们的脸太小
 					</div>
-				</li>
-				<li class="mui-table-view-cell mui-collapse">
-					<a class="mui-navigate-right" href="javascript:;">出血严重时，我可以使用止血带吗？</a>
-					<div class="mui-collapse-content">
-						未经培训的人员不适宜使用止血带，不合理、不正确使用可能加重伤情。只有在直接按压无效或 者无法直接按压的情况下，才使用止血带。另外，如果使用止血带，需记录使用时间并告知后续急救人员.
-					</div>
-				</li>
-				<li class="mui-table-view-cell mui-collapse">
-					<a class="mui-navigate-right" href="javascript:;">伤者看上去面色苍白，感觉发冷、眩晕。这意味着什么？</a>
-					<div class="mui-collapse-content">
-						这表明体内供血不足。有可能会危及生命，因为他会迅速的引发其他问题，比如 体内缺氧、心脏病发作或者器官损伤，伤者或者患者的这种身体体反应，被称之为 休克。如果你怀疑有可能出现休克，请立即拨打120.然后让患者平躺，严防血液流失。
-					</div>
-				</li>
-				<li class="mui-table-view-cell mui-collapse">
-					<a class="mui-navigate-right" href="javascript:;">我担心跟上这的雪也接触会被传染疾病，怎么办？</a>
-					<div class="mui-collapse-content">
-						最好不要直接接触他人的血液，你可以戴上医用手套或者塑料袋。 或者让上着自己用手来压迫止血。
-					</div>
-
-				</li>
-				<li class="mui-table-view-cell mui-collapse">
-					<a class="mui-navigate-right" href="javascript:;">我应该冲洗伤口吗？</a>
-					<div class="mui-collapse-content">
-						对于小的切割伤和擦伤，你可以冲洗伤口，除去污物。出血严重的伤口不要冲洗。这样做会冲掉已经形成的 血凝块，导致出血加重。
-					</div>
-				</li>
-				<li class="mui-table-view-cell mui-collapse">
-					<a class="mui-navigate-right" href="javascript:;">如果伤口中有东西嵌进去了，我怎么办？</a>
-					<div class="mui-collapse-content">
-						不要取出嵌入物，因为潜入无能堵塞伤口，阻止血液流出。可以围绕嵌入物加压包扎。 取出嵌入物会导致伤口出血更严重.
-					</div>
-				</li>
-				<li class="mui-table-view-cell mui-collapse">
-					<a class="mui-navigate-right" href="javascript:;">鼻子出血怎么办？</a>
-					<div class="mui-collapse-content">
-						捏住鼻翼，让患者身体前倾，用嘴呼吸。捏住鼻翼能促进血液凝固。不要让患者后仰，虽然这样做看似正确。 后仰可能会导致血液流入气道，将其堵塞，或者血液流入为，导致患者呕吐。
-					</div>
+				
 				</li>
 			</ul>
 		</div>
-		<script src='../js/mui.min.js'></script>
-		<script type="text/javascript" charset="utf-8">
-			mui.init({
-				swipeBack:true //启用右滑关闭功能
-			});
-		</script>
-
-	</body>
-
+	
 </html>
