fixed some mistakes and bugs

--- a/emergency/asthma.html
+++ b/emergency/asthma.html
@@ -23,9 +23,9 @@
 		<div class="mui-content">
 			<b>1</b>、帮助患者取较舒适体位坐下，并助其服药。
 			<br />
-			<b>2</b>、安抚患者
+			<b>2</b>、安抚患者。
 			<br />
-			<b>3</b>、如果哮喘加重，患者未带药物或服药后症状未缓解，请拨打120或请别人帮忙拨打120
+			<b>3</b>、如果哮喘加重，患者未带药物或服药后症状未缓解，请拨打120或请别人帮忙拨打120。
 			<hr /> 了解更多
 			<hr />
 		</div>
