--- a/emergency/diabetes.html
+++ b/emergency/diabetes.html
@@ -21,9 +21,9 @@
 		</header>
 		<div class="mui-content">
 			<b>1</b>、让患者服用含糖食物或饮料。<br />
-			<b>2</b>、安抚患者<br />
+			<b>2</b>、安抚患者。<br />
 			<b>3</b>、大多数人会逐渐缓解，但如果无法确定患者情况或者患者出现呼吸急促
-			、面色苍白、出汗或者意识丧失，请拨打120.
+			、面色苍白、出汗或者意识丧失，请拨打120。
 			<hr />
 		了解更多
 		<hr />
