--- a/emergency/fire.html
+++ b/emergency/fire.html
@@ -24,7 +24,7 @@
 			<b>2</b>、如果烧烫伤需要进一步的医疗处理，可以用保鲜膜或干净的
 			塑料袋轻轻盖住伤口。或者也可以不用覆盖伤口。<br />
 			<b>3</b>、如有必要，请拨打120或者请他人帮助拨打。
-			请帮助他们使用。并且持续安慰患者，等待救护车抵达
+			请帮助他们使用。并且持续安慰患者，等待救护车抵达。
 			<hr />
 		了解更多
 		<hr />
