--- a/information/info.html
+++ b/information/info.html
@@ -2,7 +2,7 @@
 <html>
 	<head>
 		<meta charset="utf-8">
-		<title></title>
+		<title>中国红十字会</title>
 		<link href="../css/mui.css" rel="stylesheet" />
 	</head>
 	<body>
