--- a/information/principle.html
+++ b/information/principle.html
@@ -3,7 +3,7 @@
 
 	<head>
 		<meta charset="utf-8">
-		<title></title>
+		<title>红十字会运动基本原则</title>
 		<link href="../css/mui.css" rel="stylesheet" />
 	</head>
 
@@ -15,13 +15,13 @@
 		<div class="mui-content">
 			<div class="mui-content-padded">
 
-				一、人道 国际红十字与红新月运动的本意是不加歧视的救护战地伤员，不管是国际冲突 还是国内冲突。努力防止并减轻人民的痛苦，不论这疾苦发生在什么地方。本运动的宗旨 是保护人的生命和健康，保障人类的尊严；促进人与人的相互了解、友谊和合作，促进持久和平。
-				<br /> 二、公正 本运动不因国籍、种族、宗教信仰、阶级和政治见解而有所歧视，仅根据需要， 努力减轻人们的疾苦，优先救济困难最紧迫的人
-				<br /> 三、中立 为了继续得到所有人的信任，本运动在冲突双方之间不采取立场 任何时候也不参与涉及政治、种族、宗教或意识形态的争论
-				<br /> 四、独立 本运动是独立的。虽然各国红会是本国政府人道工作的助手并受 本国法律的制约，但必须始终保持独立，以便任何时候都能按本运动的原则行事。
-				<br /> 五、志愿服务 本运动是志愿救济运动，绝不期望以任何形式得到好处
-				<br /> 六、统一 任何一个国家只能有一个红十字会或红新月会，它必须向所有人开放，必须在全国范围内开展人道工作
-				<br /> 七、普遍 国际红十字与红新月运动是世界性的。在这个运动中，所有的红十字会或红新月会都享有同等地位， 负有同样责任和义务，并相互支援。
+				一、<b>人道 </b>国际红十字与红新月运动的本意是不加歧视的救护战地伤员，不管是国际冲突 还是国内冲突。努力防止并减轻人民的痛苦，不论这疾苦发生在什么地方。本运动的宗旨 是保护人的生命和健康，保障人类的尊严；促进人与人的相互了解、友谊和合作，促进持久和平。
+				<br /> 二、<b>公正</b> 本运动不因国籍、种族、宗教信仰、阶级和政治见解而有所歧视，仅根据需要， 努力减轻人们的疾苦，优先救济困难最紧迫的人
+				<br /> 三、<b>中立</b> 为了继续得到所有人的信任，本运动在冲突双方之间不采取立场 任何时候也不参与涉及政治、种族、宗教或意识形态的争论
+				<br /> 四、<b>独立 </b> 本运动是独立的。虽然各国红会是本国政府人道工作的助手并受 本国法律的制约，但必须始终保持独立，以便任何时候都能按本运动的原则行事。
+				<br /> 五、<b>志愿服务</b> 本运动是志愿救济运动，绝不期望以任何形式得到好处
+				<br /> 六、<b>统一 </b>任何一个国家只能有一个红十字会或红新月会，它必须向所有人开放，必须在全国范围内开展人道工作
+				<br /> 七、<b>人道普遍</b> 国际红十字与红新月运动是世界性的。在这个运动中，所有的红十字会或红新月会都享有同等地位， 负有同样责任和义务，并相互支援。
 
 				</p>
 			</div>
