--- a/precaution/chemistry.html
+++ b/precaution/chemistry.html
@@ -21,7 +21,7 @@
 	化学紧急事故是现代生活的产物。不管是家里、路上或工作场所发生的意外，还是恐怖袭击，我们都该知道怎么做。<hr />
 	
 	<h4>事前预防</h4><hr />
-	1、确保化学品远离儿童<br />
+	1、确保化学品远离儿童。<br />
 	2、不要把洗涤用品或家庭化学品放入饮料瓶中。避免造成误饮。<br />
 	3、化学品溅撒应立即用抹布清理，并保存好眼睛和皮肤。抹布置于室外安全地点挥发。<br />
 	丢弃时应用报纸包裹,置入塑料袋封严。<hr />
