--- a/precaution/earthquake.html
+++ b/precaution/earthquake.html
@@ -34,14 +34,11 @@
 	3、远离窗户，以避免被碎裂的玻璃扎伤。<br />
 	4、留在室内，直到摇动停止，并确定能安全出去。<br />
 	5、要非常清楚，地震的时候建筑物的火灾报警器和喷淋系统通常会关闭。
-	</div>
-	<div>
+	<hr />
 	<h4>震后措施</h4><hr />
 	1、如果你不在家，需要等待政府有关部门宣布安全了才能回家。<br />
-	2、应付余震的措施。如果感觉到余震，蹲下，遮蔽住头部和躯干<br />
-	3、
-	</div>
-	<div>
+	2、应付余震的措施。如果感觉到余震，蹲下，遮蔽住头部和躯干，不要动。<br />
+	3、远离坍塌区域，检查门窗，地板等是否有损坏。
 	<h4>相关急救</h4><hr />
 	骨折
 	</div>
