--- a/precaution/food.html
+++ b/precaution/food.html
@@ -23,10 +23,10 @@
 	<h4>怎么处理水</h4><hr />
 	1、安全的方法是烧开水，能杀灭致病菌和寄生虫。<br />
 	2、用干净的布过滤水，可去掉大部分杂质。<br />
-	3、让水沸腾，持续至少1分钟。<br />
+	3、让水沸腾，持续至少1分钟。<br /><hr />
 	<h4>停电时要保存好食品</h4><hr />
 	1、易腐烂的食品应首先使用，如果已经腐烂，应该及时处理。<br />	
-	2、污染的水不能食用，平时记得自备应急用水。<hr />
+	2、污染的水不能食用，平时记得自备应急用水。
 	</div>
 	</body>
 </html>
