--- a/emergency/unconcious.html
+++ b/emergency/unconcious.html
@@ -21,8 +21,8 @@
 		</header>
 		<div class="mui-content">
 			<b>1</b>、让患者头部后仰，检查他是否有呼吸。<br />
-			<b>2</b>、若有呼吸，则参照<br />
-			<b>3</b>、如果患者呼吸，则参照
+			<b>2</b>、若有呼吸，则参照无意识有自主呼吸急救指南。<br />
+			<b>3</b>、如果患者呼吸，则参照无意识无呼吸急救指南。
 			<hr />
 		了解更多
 		<hr />
