--- a/information/course.html
+++ b/information/course.html
@@ -2,7 +2,7 @@
 <html>
 	<head>
 		<meta charset="utf-8">
-		<title></title>
+		<title>急救课程</title>
 		<link href="../css/mui.css" rel="stylesheet" />
 	</head>
 	<body>
