--- a/precaution/everyday.html
+++ b/precaution/everyday.html
@@ -3,7 +3,7 @@
 	<head>
 		<meta charset="utf-8">
 		<meta name="viewport" content="width=device-width,initial-scale=1,minimum-scale=1,maximum-scale=1,user-scalable=no" />
-		<title>过敏反应</title>
+		
 		<link href="../css/mui.css" rel="stylesheet" />
 		<style>
 			p {
@@ -26,14 +26,14 @@
 	1、对自己和他人的安全情况有清醒的认识，认识邻居，遵守政府安全建议。<br />
 	2、如果你的朋友和家庭成员生病，确保清楚自己该怎样帮他们。知道在哪里找他们的药。<br />
 	3、保留本地的紧急救助电话号码。<br />
-	4、知道怎样去当地医院<br />
-	5、学习简单的急救技能。
-	</div>
+	4、知道怎样去当地医院。<br />
+	5、学习简单的急救技能。<hr />
+	
 	<h4>事发时</h4><hr />
 	1、随时准备帮助别人，尽管有时你不确定该怎么做些什么，还是要提供帮助。<br />	
 	2、深呼吸使自己平静下来。<br/>
 	3、如果不知道怎么做，给急救中心打电话。<hr />
-	</div>
+
 	</div>
 	</body>
 </html>
