add pictures and fix some bugs

--- a/emergency/allergy.html
+++ b/emergency/allergy.html
@@ -20,6 +20,7 @@
 			<h1 class="mui-title">过敏反应</h1>
 		</header>
 		<div class="mui-content">
+			<img style="height: auto;width:100%" src="../imgs/allergy.jpg"/>
 			<b>1</b>、患者手、足或面部可能出现皮疹，痒、肿、呼吸变缓。<br />
 			<b>2</b>、观察到这些症状，立即拨打120。<br />
 			<b>3</b>、如果患者有过敏症，并且随声携带自动注射器，
