--- a/emergency/asthma.html
+++ b/emergency/asthma.html
@@ -21,6 +21,7 @@
 			<h1 class="mui-title">哮喘发作</h1>
 		</header>
 		<div class="mui-content">
+			<img style="height: auto;width:100%" src="../imgs/asthma2.jpg"/>
 			<b>1</b>、帮助患者取较舒适体位坐下，并助其服药。
 			<br />
 			<b>2</b>、安抚患者。
