--- a/emergency/broken_bone.html
+++ b/emergency/broken_bone.html
@@ -20,11 +20,14 @@
 			<h1 class="mui-title">骨折</h1>
 		</header>
 		<div class="mui-content">
+			<img style="height: auto;width:100%" src="../imgs/broken-bones.png"/>
 			<b>1</b>、鼓励伤者用自己的手，或用沉淀、衣物等包扎、固定患处，以避免不必要的活动。<br />
 			<b>2</b>、如果伤处明显变形或有剧痛，以及自己不能行走时，应拨打120或请别人帮忙拨打。<br />
 			<b>3</b>、确保伤处被妥善固定，直到救援抵达。
 			<hr />
 		了解更多
+		<video src="../video/broken-bones.mp4" controls="controls">
+</video>
 		<hr />
 		</div>
 	</body>
