--- a/emergency/diabetes.html
+++ b/emergency/diabetes.html
@@ -20,6 +20,7 @@
 			<h1 class="mui-title">糖尿病发作</h1>
 		</header>
 		<div class="mui-content">
+			<img style="height: auto;width:100%" src="../imgs/diabetes.png"/>
 			<b>1</b>、让患者服用含糖食物或饮料。<br />
 			<b>2</b>、安抚患者。<br />
 			<b>3</b>、大多数人会逐渐缓解，但如果无法确定患者情况或者患者出现呼吸急促
