--- a/emergency/fire.html
+++ b/emergency/fire.html
@@ -20,6 +20,7 @@
 			<h1 class="mui-title">烧烫伤</h1>
 		</header>
 		<div class="mui-content">
+			<img style="height: auto;width:100%" src="../imgs/fire2.png"/>
 			<b>1</b>、用流动的冷水冲洗烧烫伤部位以降低局部温度，至少冲洗10分钟。<br />
 			<b>2</b>、如果烧烫伤需要进一步的医疗处理，可以用保鲜膜或干净的
 			塑料袋轻轻盖住伤口。或者也可以不用覆盖伤口。<br />
