--- a/emergency/strain.html
+++ b/emergency/strain.html
@@ -20,6 +20,7 @@
 			<h1 class="mui-title">扭伤和拉伤</h1>
 		</header>
 		<div class="mui-content">
+			<img style="height: auto;width:100%" src="../imgs/strain.jpg"/>
 			<b>1</b>、冷敷患处。<br />
 			<b>2</b>、如果情况没有缓解，应寻求医疗帮助。
 			<hr />
