--- a/emergency/stroke.html
+++ b/emergency/stroke.html
@@ -20,6 +20,7 @@
 			<h1 class="mui-title">中风</h1>
 		</header>
 		<div class="mui-content">
+			<img style="height: auto;width:100%" src="../imgs/stroke2.png"/>
 			<b>1</b>、记住F.A.S.T。面部(Face)：是否一侧面瘫？胳膊(Arms)：两个胳膊能同时抬起来吗？说话(Speech)：
 			说话时吐字表达清晰吗?时间(Time)：马上拨打120。<br />
 			<b>2</b>、等候救护车时，随时和患者说话，安抚他们。
