--- a/home/allergy.html
+++ b/home/allergy.html
@@ -21,13 +21,12 @@
 		</header>
 		
 		<div class="mui-content">
-			<h4>1.患者手、足或面部出现皮疹、瘙痒或水肿，并可能出现呼吸浅慢</h4> 　　也可能出现呕吐和腹泻状况，引起过敏反应的常见过敏原有花粉、蚊虫叮咬、乳胶，还有一些食物，如坚果或者奶制品.
+			<h4>1.患者手、足或面部出现皮疹、瘙痒或水肿，并可能出现呼吸浅慢</h4> 　　也可能出现呕吐和腹泻状况，引起过敏反应的常见过敏原有花粉、蚊虫叮咬、乳胶，还有一些食物，如坚果或者奶制品。
 
-			<h4>2.如果有人发生过敏反应，请拨打120</h4> 　　如果有人发生过敏反应（呼吸困难、休克、或者精神异常），并带有自动注射器，请帮助他们用药.
+			<h4>2.如果有人发生过敏反应，请拨打120</h4> 　　如果有人发生过敏反应（呼吸困难、休克、或者精神异常），并带有自动注射器，请帮助他们用药。
 
 			<h4>3.等候救护车时，请持续观察并安抚患者</h4>
-		</div>
-		<div class="mui-content">
+		<hr />
 			<h4>常见问题</h4>
 			<hr />
 			<ul class="mui-table-view">
