--- a/home/fire.html
+++ b/home/fire.html
@@ -22,9 +22,9 @@
 		<div class="mui-content">
 			<h4>1.用流动的冷水冲洗烧烫伤部位降温，至少十分钟</h4> 　　降温能减轻疼痛，水肿和结痂危险，烧伤部位降温越及时，降温时间越长，造成的损伤越小。
 			<h4>2.如果烧烫伤需要进一步的医疗处理可临时用保鲜膜，或干净塑料袋轻轻盖住伤口，反之不应用塑料物品覆盖伤口</h4>
-			<h4>3.如有需要拨打120或者请别人帮忙拨打</h4>  如果孩子被烧烫伤烧烫伤后起了水泡，且累及身体多处部位，包括手足关节或面部或者皮下组织已经暴露，一定要拨打120。
-		</div>
-		<div class="mui-content">
+			<h4>3.如有需要拨打120或者请别人帮忙拨打</h4>
+			　　如果孩子被烧烫伤烧烫伤后起了水泡，且累及身体多处部位，包括手足关节或面部或者皮下组织已经暴露，一定要拨打120。
+		<hr />
 			<h4>常见问题</h4>
 			<hr />
 			<ul class="mui-table-view">
