--- a/home/severheat.html
+++ b/home/severheat.html
@@ -20,8 +20,9 @@
 			<h1 class="mui-title">中暑</h1>
 		</header>
 		<div class="mui-content">
+			<img style="height: auto;width:100%" src="../imgs/serverheat2.jpg"/>
 			<h4>1.患者皮肤灼热、发红，可能干燥，也可能潮湿，患者可能出现意识障碍，呕吐以及发热</h4>
-			<h4>2.请尽快拨打120，或请他人帮助呼叫</h4> 严重中暑会危及生命。
+			<h4>2.请尽快拨打120，或请他人帮助呼叫</h4> 　　严重中暑会危及生命。
 			<h4>3.如果需要，用布包裹冰块或者冰袋，敷于患者的手腕、脚踝、腹股、颈部和腋窝处，持续快速降温</h4>
 			<h4>常见问题</h4>
 			<hr />
