--- a/home/stings_bites.html
+++ b/home/stings_bites.html
@@ -20,7 +20,7 @@
 			<h1 class="mui-title">蜇伤和咬伤</h1>
 		</header>
 		<div class="mui-content">
-			
+			<img style="height: auto;width:100%" src="../imgs/bitesstings.jpg"/>
 			<h4>1.昆虫蛰伤或叮咬可以导致严重的损伤或疾病，应遵照这些预防措施防范蛰伤、叮咬，保护自己和家人，特别是蜱虫的叮咬。</h4> 
 			<hr />
 			<h4>相关急救</h4>
