--- a/home/strain.html
+++ b/home/strain.html
@@ -20,6 +20,7 @@
 			<h1 class="mui-title">扭伤和拉伤</h1>
 		</header>
 		<div class="mui-content">
+			<img style="height: auto;width:100%" src="../imgs/strain.jpg"/>
 			<h4>1.记住休息、固定、冷敷和抬高伤肢</h4> 　　按压伤口，可帮助血液凝固，并止血这是肌肉、骨、关节损伤的一般治疗。
 			<h4>2.休息、固定、冷敷、抬高伤肢</h4>
 			<hr />
