--- a/precaution/everyday.html
+++ b/precaution/everyday.html
@@ -20,7 +20,7 @@
 	</header>
 	<div class="mui-content">
 	事故和突发事件可能发生在任何人身上，发生在任何地方，任何时间。从楼梯上跌落、野餐时被
-	烧伤都有可能，故应为每天的突发事件做好准备。
+	烧伤都有可能，故应为每天的突发事件做好准备。<hr />
 
 	<h4>事故发生前的措施</h4><hr />
 	1、对自己和他人的安全情况有清醒的认识，认识邻居，遵守政府安全建议。<br />
