--- a/precaution/servercold.html
+++ b/precaution/servercold.html
@@ -19,6 +19,7 @@
 			<h1 class="mui-title">严寒</h1>
 	</header>
 	<div class="mui-content">
+		<img style="height: auto;width:100%" src="../imgs/yanhan.jpg"/>
 	冬季严寒不仅让人感觉不适，甚至会威胁生命，尤其是对老年人。抵御严寒的好方法是做好事前预防。
 	<h4>严寒来临前措施</h4><hr />
 	1、应急包在冬季要增加毯子、靴子、帽子和手套。<br />
