--- a/precaution/severeheat.html
+++ b/precaution/severeheat.html
@@ -18,6 +18,7 @@
 			<h1 class="mui-title">热浪</h1>
 	</header>
 	<div class="mui-content">
+		<img style="height: auto;width:100%" src="../imgs/serverheat.jpg"/>
 	热浪听起来没什么，但热浪可能致命。学习热浪来袭时怎么做，以预防热浪的侵袭。<hr />
 	<h4>热浪来袭前措施</h4><hr />
 	1、确保储备充足的瓶装水，在干旱或水供应困难时非常有用。<br />
