--- a/emergency/sting_bites.html
+++ b/emergency/sting_bites.html
@@ -23,6 +23,7 @@
 		<div>
 		</div>
 		<div class="mui-content">
+			<img style="height: auto;width:100%" src="../imgs/stings-bite.jpg"/>
 			昆虫蛰伤或叮咬可以导致严重的损伤或疾病。应遵照这些预防措施防范蛰伤、叮咬，保护自己和家人，
 			特别是蜱虫的叮咬。
 			<hr />
