--- a/home/bleeding.html
+++ b/home/bleeding.html
@@ -22,9 +22,7 @@
 		<div class="mui-content">
 			<h4>1.寻找周围的合适物品按压伤口，止血或减缓出血</h4> 　　按压伤口，可帮助血液凝固，并止血。
 			<h4>2.如果出血严重，请尽快拨打120，或请他人帮助呼叫</h4>
-			<h4>3.持续按压伤口直到医务人员到达</h4>
-		</div>
-		<div class="mui-content">
+			<h4>3.持续按压伤口直到医务人员到达</h4><hr />
 			<h4>常见问题</h4>
 			<hr />
 			<ul class="mui-table-view">
