--- a/home/distress.html
+++ b/home/distress.html
@@ -20,11 +20,12 @@
 			<h1 class="mui-title">休克</h1>
 		</header>
 		<div class="mui-content">
-			<h4>1.可根据下列症状判断患者是否处于休克状态：心神不宁或烦躁不安，恶心或呕吐，嗜睡、意识障碍或意识丧失，皮肤苍白</h4> 　　患者口唇和甲床呈现青紫色，呼吸和脉搏，也可能加快。
+			<img style="height: auto;width:100%" src="../imgs/xiuke1.jpg"/>
+			<h4>1.可根据下列症状判断患者是否处于休克状态：心神不宁或烦躁不安，恶心或呕吐，嗜睡、意识障碍或意识丧失，皮肤苍白</h4>　　患者口唇和甲床呈现青紫色，呼吸和脉搏，也可能加快。
 			<h4>2.使患者平躺</h4>
 			<h4>3.控制所有外出血</h4>
 			<h4>4.防止患者冻伤或中暑</h4>
-			<h4>5.不要给患者任何饮食，请他人帮助拨打急救电话</h4>尽力使患者感到舒适，直至急救人员到。
+			<h4>5.不要给患者任何饮食，请他人帮助拨打急救电话</h4>　　尽力使患者感到舒适，直至急救人员到。
 		</div>
 		
 		
