--- a/precaution/tsunami.html
+++ b/precaution/tsunami.html
@@ -10,14 +10,15 @@
 				padding: 5px 8px;
 			}
 		</style>
-		<title>龙卷风</title>
+		<title>海啸</title>
 	</head>
 	<body>
 	<header class="mui-bar mui-bar-nav">
 			<a class="mui-action-back mui-icon mui-icon-left-nav" href="../precaution.html"></a>
-			<h1 class="mui-title">龙卷风</h1>
+			<h1 class="mui-title">海啸</h1>
 	</header>
 	<div class="mui-content">
+		<img style="height: auto;width:100%" src="../imgs/tsunami.jpg"/>
 	海啸是由海地大地震或者巨大崩塌陷落海洋造成的一系列大海浪。强震之后的数分钟内，
 	海啸能够伤及海滩上或者近海低地处的人们。一次大地震后，海啸危险期可能持续数小时。
 	<hr />
